--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<version>2.0.0.RELEASE</version>
 		<relativePath/>
 	</parent>
-	<groupId>com.example</groupId>
+	<groupId>com.hendisantika</groupId>
 	<artifactId>demo-webflux-streaming</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
@@ -23,7 +23,7 @@
 
 	<modules>
 		<!--<module>quote-app</module>-->
-		<!--<module>quote-service</module>-->
+		<module>quote-service</module>
 	</modules>
 
 	<dependencyManagement>
