--- a/quote-app/pom.xml
+++ b/quote-app/pom.xml
@@ -62,11 +62,13 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
+            <version>4.0.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>highcharts</artifactId>
+            <version>6.0.7</version>
             <scope>runtime</scope>
         </dependency>
 
